--- a/vue-eleme/src/common/styles/base.scss
+++ b/vue-eleme/src/common/styles/base.scss
@@ -1,3 +1,11 @@
+body, html {
+	line-height: 1;
+	font-weight: 200;
+	font-family: 'PingFang SC','STHeitiSC-Light','Helvetical-Light',arial,sans-serif;
+}
+
+
+
 @media (-webkit-min-device-pixel-ratio:1.5),(min-device-pixel-ratio:1.5) {
 	.border-1px {
 		&::after {
